--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,29 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+@layer base {
+    [x-cloak] {
+        display: none !important;
+    }
+
+    *,
+    ::before,
+    ::after {
+        border-color: rgba(0, 0, 0, 0.15);
+    }
+
+    .dark *,
+    .dark ::before,
+    .dark ::after {
+        border-color: rgba(255, 255, 255, 0.15);
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+        *,
+        ::before,
+        ::after {
+            transition: none !important;
+        }
+    }
+}
